--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 _build/
 
 # dotfiles
-.*
+# .*
+.venv/
+.env
 !.gitignore
 !.github
 !.mailmap
@@ -47,3 +49,4 @@ package.json
 /man/
 /share/
 /src/
+/sean stuff/
