--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,6 @@ passlib = "^1.7.4"
 Pillow = "^10.1.0"
 polib = "^1.2.0"
 psutil = "^5.9.6"
-psycopg2 = "^2.2"
 pydot = "^1.4.2"
 pyopenssl = "^23.3.0"
 pypdf2 = "^3.0.1"
@@ -47,11 +46,11 @@ xlrd = "^2.0.1"
 xlsxwriter = "^3.1.9"
 xlwt = "^1.3.0"
 zeep = "^4.2.1"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
 freezegun = "^1.3.1"
-pywin32 = "^306"
 
 [build-system]
 requires = ["poetry-core"]
