--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,9 +39,9 @@ qrcode = "^7.4.2"
 reportlab = "^4.0.7"
 rjsmin = "^1.2.2"
 requests = "^2.31.0"
-urllib3 = "^2.1.0"
+urllib3 = "1.26.5"
 vobject = "^0.9.6.1"
-werkzeug = "2.3.8"
+werkzeug = "2.0.2"
 xlrd = "^2.0.1"
 xlsxwriter = "^3.1.9"
 xlwt = "^1.3.0"
